--- a/src/styles.css
+++ b/src/styles.css
@@ -25,8 +25,15 @@ body{
     display: none;
     width: 25%;
     height: 25%;
+    position: relative;
     
     
+    
+}
+
+#enemy-display{
+    float: right;
+    display: none;
 }
 
 #char-display{
@@ -38,61 +45,3 @@ body{
     float: right;
 }
 
-.rouge{
-    bottom: 15%;
-    position: absolute;
-    -webkit-animation: linear;
-    -webkit-animation-name: run;
-    -webkit-animation-duration: 5s;
-}
-
-@-webkit-keyframes run {
-    0%  {left:0;}
-    50% {left: 100%}
-    100% {left: 0;}
-}
-   
-
-
-
-/* .stylie {
-  animation-duration: 1000ms;
-  animation-delay: 0ms;
-  animation-fill-mode: forwards;
-  animation-timing-function: linear;
-  animation-iteration-count: 1;
-  transform-origin: 0 0;
-} */
-/* @keyframes stylie-keyframes {
-  0% {transform:translate(0px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(-50%, -50%);}
-  3.33% {transform:translate(85.4844px, 0.3px) scale(1) rotateX(10deg) rotateY(0deg) rotateZ(10deg) translate(-50%, -50%);}
-  6.67% {transform:translate(168.0711px, 0.6px) scale(1) rotateX(20deg) rotateY(0deg) rotateZ(20deg) translate(-50%, -50%);}
-  10% {transform:translate(247.76px, 0.9px) scale(1) rotateX(30deg) rotateY(0deg) rotateZ(30deg) translate(-50%, -50%);}
-  13.33% {transform:translate(324.5511px, 1.2px) scale(1) rotateX(40deg) rotateY(0deg) rotateZ(40deg) translate(-50%, -50%);}
-  16.67% {transform:translate(398.4444px, 1.5px) scale(1) rotateX(50deg) rotateY(0deg) rotateZ(50deg) translate(-50%, -50%);}
-  20% {transform:translate(469.44px, 1.8px) scale(1) rotateX(60deg) rotateY(0deg) rotateZ(60deg) translate(-50%, -50%);}
-  23.33% {transform:translate(537.5378px, 2.1px) scale(1) rotateX(70deg) rotateY(0deg) rotateZ(70deg) translate(-50%, -50%);}
-  26.67% {transform:translate(602.7378px, 2.4px) scale(1) rotateX(80deg) rotateY(0deg) rotateZ(80deg) translate(-50%, -50%);}
-  30% {transform:translate(665.04px, 2.7px) scale(1) rotateX(90deg) rotateY(0deg) rotateZ(90deg) translate(-50%, -50%);}
-  33.33% {transform:translate(724.4444px, 3px) scale(1) rotateX(100deg) rotateY(0deg) rotateZ(100deg) translate(-50%, -50%);}
-  36.67% {transform:translate(780.9511px, 3.3px) scale(1) rotateX(110deg) rotateY(0deg) rotateZ(110deg) translate(-50%, -50%);}
-  40% {transform:translate(834.56px, 3.6px) scale(1) rotateX(120deg) rotateY(0deg) rotateZ(120deg) translate(-50%, -50%);}
-  43.33% {transform:translate(885.2711px, 3.9px) scale(1) rotateX(130deg) rotateY(0deg) rotateZ(130deg) translate(-50%, -50%);}
-  46.67% {transform:translate(933.0844px, 4.2px) scale(1) rotateX(140deg) rotateY(0deg) rotateZ(140deg) translate(-50%, -50%);}
-  50% {transform:translate(978px, 4.5px) scale(1) rotateX(150deg) rotateY(0deg) rotateZ(150deg) translate(-50%, -50%);}
-  53.33% {transform:translate(1020.0178px, 4.8px) scale(1) rotateX(160deg) rotateY(0deg) rotateZ(160deg) translate(-50%, -50%);}
-  56.67% {transform:translate(1059.1378px, 5.1px) scale(1) rotateX(170deg) rotateY(0deg) rotateZ(170deg) translate(-50%, -50%);}
-  60% {transform:translate(1095.36px, 5.4px) scale(1) rotateX(180deg) rotateY(0deg) rotateZ(180deg) translate(-50%, -50%);}
-  63.33% {transform:translate(1128.6844px, 5.7px) scale(1) rotateX(190deg) rotateY(0deg) rotateZ(190deg) translate(-50%, -50%);}
-  66.67% {transform:translate(1159.1111px, 6px) scale(1) rotateX(200deg) rotateY(0deg) rotateZ(200deg) translate(-50%, -50%);}
-  70% {transform:translate(1186.64px, 6.3px) scale(1) rotateX(210deg) rotateY(0deg) rotateZ(210deg) translate(-50%, -50%);}
-  73.33% {transform:translate(1211.2711px, 6.6px) scale(1) rotateX(220deg) rotateY(0deg) rotateZ(220deg) translate(-50%, -50%);}
-  76.67% {transform:translate(1233.0044px, 6.9px) scale(1) rotateX(230deg) rotateY(0deg) rotateZ(230deg) translate(-50%, -50%);}
-  80% {transform:translate(1251.84px, 7.2px) scale(1) rotateX(240deg) rotateY(0deg) rotateZ(240deg) translate(-50%, -50%);}
-  83.33% {transform:translate(1267.7778px, 7.5px) scale(1) rotateX(250deg) rotateY(0deg) rotateZ(250deg) translate(-50%, -50%);}
-  86.67% {transform:translate(1280.8178px, 7.8px) scale(1) rotateX(260deg) rotateY(0deg) rotateZ(260deg) translate(-50%, -50%);}
-  90% {transform:translate(1290.96px, 8.1px) scale(1) rotateX(270deg) rotateY(0deg) rotateZ(270deg) translate(-50%, -50%);}
-  93.33% {transform:translate(1298.2044px, 8.4px) scale(1) rotateX(280deg) rotateY(0deg) rotateZ(280deg) translate(-50%, -50%);}
-  96.67% {transform:translate(1302.5511px, 8.7px) scale(1) rotateX(290deg) rotateY(0deg) rotateZ(290deg) translate(-50%, -50%);}
-  100% {transform:translate(1304px, 9px) scale(1) rotateX(300deg) rotateY(0deg) rotateZ(300deg) translate(-50%, -50%);}
-}html::after { content: url(https://ga-beacon.appspot.com/UA-42910121-1/stylie?pixel); position: absolute; left: -999em; } */
